[package]
name = "rustopia"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
bevy = "0.14"
bevy_rapier3d = { version = "0.27", features = ["parallel", "simd-stable"] }
rustopia_settings = { path = "crates/rustopia_settings" }
rustopia_skylight = { path = "crates/rustopia_skylight" }
rustopia_player = { path = "crates/rustopia_player" }
# debugpanel = { path = "crates/debugpanel" }
# terrain = { path = "crates/terrain" }


[workspace]
resolver = "2"
# members = ["crates/*"]
members = [
    "crates/rustopia_settings",
    "crates/rustopia_skylight",
    "crates/rustopia_player",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
strip = "symbols"
