[package]
name = "rustopia_debugpanel"
version = "0.15.0"
edition = "2021"

[dependencies]
strum = "0.26"
strum_macros = "0.26"
bevy = { version = "0.15", default-features = false, features = [
    "bevy_gizmos",
    "bevy_ui",
    "sysinfo_plugin",
    "bevy_dev_tools",
] }
bevy_rapier3d = { version = "0.28", features = ["parallel", "simd-stable"] }
